[package]
name = "ringer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
warp = "0.3"